--- a/package.json
+++ b/package.json
@@ -5,33 +5,37 @@
   "repository": "git@github.com:alexandcote/plantus.web.git",
   "scripts": {
     "start": "webpack-dev-server -d --progress --colors",
-    "build": "webpack --progress --colors"
+    "build": "webpack -p --config=webpack.prod.config.js --progress --colors",
+    "ship": "webpack -p --config=webpack.prod.config.js --progress --colors && scp -r ./dist/ spare@138.197.137.254:/var/www/plantus.xyz"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2"
-  },
-  "devDependencies": {
     "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "bootstrap": "^3.3.7",
     "css-loader": "^0.26.1",
+    "ejs-loader": "^0.3.0",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.3.0",
+    "react": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.14.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-flowtype": "^2.30.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "file-loader": "^0.9.0",
     "flow-bin": "0.36.0",
-    "node-sass": "^4.3.0",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
 }
