--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.22.0",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.26.1",
+    "dotenv-webpack": "^1.4.0",
     "ejs-loader": "^0.3.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.28.0",
