--- a/package.json
+++ b/package.json
@@ -11,20 +11,33 @@
   "dependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2016": "^6.22.0",
+    "babel-preset-es2017": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-3": "^6.22.0",
+    "babel-runtime": "^6.23.0",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.26.1",
     "dotenv": "^4.0.0",
     "ejs-loader": "^0.3.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.28.0",
+    "inject-loader": "^3.0.0-beta4",
+    "localforage": "^1.5.0",
     "node-sass": "^4.3.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-bootstrap": "^0.23.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0",
+    "redux-persist": "^4.4.0",
+    "redux-saga": "^0.14.3",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
