--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs-loader": "^0.3.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.28.0",
+    "immutability-helper": "^2.1.2",
     "inject-loader": "^3.0.0-beta4",
     "localforage": "^1.5.0",
     "node-sass": "^4.3.0",
