--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router": "^3.0.2",
     "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.8",
+    "recharts": "^0.21.2",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-persist": "^4.4.0",
